Bug 342985 - KTP Contact List crashes when attempting to join a chat room
Summary: KTP Contact List crashes when attempting to join a chat room
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: common-internals (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-17 23:04 UTC by Dan O.
Modified: 2015-01-20 14:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan O. 2015-01-17 23:04:06 UTC
I initially thought this was an issue with ktp-contact-list, however the stack trace showed differently. Signed in to a Jabber account, when I try to join a chat room the contact list window simply vanishes without any sort of crash logger appearing. Running ktp-contactlist through gdb, I see that it generates a stack trace, below. 

Reproducible: Always




[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
QCoreApplication::arguments: Please instantiate the QApplication object first
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
QCoreApplication::arguments: Please instantiate the QApplication object first
QCoreApplication::arguments: Please instantiate the QApplication object first
[New Thread 0x3866d3be700 (LWP 15281)]
ktp-models: invalid index data requested QModelIndex(-1,-1,0x0,QObject(0x0) )
ktp-models: KPeople support not built-in, using normal model
ktp-common-internals: Current presence changed
ktp-common-internals: Current presence changed
kf5.kservice.sycoca: Trying to open ksycoca from "/home/dan/.cache/ksycoca5"
ktp-logger: loaded factory : TpLoggerPluginFactory(0x5219a8a780)
ktp-logger: loaded logger plugin :  TpLoggerPlugin(0x5219a7e9b0)
Created Utils instance
ktp-models: Creating a new Account from account: Tp::Account(0x5219a01670)
ktp-models: Account not already in model. Create new Account from account: Tp::Account(0x5219a01670)

Program received signal SIGSEGV, Segmentation fault.
0x000003867e60a0a4 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x8) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
135	../../include/QtCore/../../src/corelib/tools/qscopedpointer.h: No such file or directory.
(gdb) bt
#0  0x000003867e60a0a4 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x8) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
#1  0x000003867e61f13d in qGetPtrHelper<QScopedPointer<QObjectData> > (p=...) at /usr/include/qt5/QtCore/qglobal.h:961
#2  0x000003867e621438 in QWidget::d_func (this=0x0) at ../../include/QtWidgets/../../src/widgets/kernel/qwidget.h:121
#3  0x000003867e6751cd in QWidget::setEnabled (this=0x0, enable=false) at kernel/qwidget.cpp:3341
#4  0x000003867fcbd4ae in KTp::JoinChatRoomDialog::setJoinInProgress (this=0x5219abcbc0, inProgress=true)
    at /var/tmp/portage/net-im/ktp-common-internals-9999/work/ktp-common-internals-9999/KTp/Widgets/join-chat-room-dialog.cpp:464
#5  0x000003867fcbafc0 in KTp::JoinChatRoomDialog::accept (this=0x5219abcbc0)
    at /var/tmp/portage/net-im/ktp-common-internals-9999/work/ktp-common-internals-9999/KTp/Widgets/join-chat-room-dialog.cpp:215
#6  0x000003867e9145f4 in QDialog::qt_static_metacall (_o=0x5219abcbc0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x39bdbfe7690) at .moc/moc_qdialog.cpp:112
#7  0x000003867cf23b21 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#8  0x000003867e7d3f1b in QDialogButtonBox::accepted (this=0x5219afa840) at .moc/moc_qdialogbuttonbox.cpp:271
#9  0x000003867e7d3309 in QDialogButtonBoxPrivate::_q_handleButtonClicked (this=0x5219afa880) at widgets/qdialogbuttonbox.cpp:860
#10 0x000003867e7d39cd in QDialogButtonBox::qt_static_metacall (_o=0x5219afa840, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x39bdbfe7920) at .moc/moc_qdialogbuttonbox.cpp:154
#11 0x000003867cf23b21 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#12 0x000003867ebaa80c in QAbstractButton::clicked (this=0x5219afabd0, _t1=false) at .moc/moc_qabstractbutton.cpp:298
#13 0x000003867e785b27 in QAbstractButtonPrivate::emitClicked (this=0x5219afac10) at widgets/qabstractbutton.cpp:534
#14 0x000003867e785a82 in QAbstractButtonPrivate::click (this=0x5219afac10) at widgets/qabstractbutton.cpp:527
#15 0x000003867e787722 in QAbstractButton::mouseReleaseEvent (this=0x5219afabd0, e=0x39bdbfe82f0) at widgets/qabstractbutton.cpp:1132
#16 0x000003867e685507 in QWidget::event (this=0x5219afabd0, event=0x39bdbfe82f0) at kernel/qwidget.cpp:8656
#17 0x000003867e7874f8 in QAbstractButton::event (this=0x5219afabd0, e=0x39bdbfe82f0) at widgets/qabstractbutton.cpp:1089
#18 0x000003867e8706cd in QPushButton::event (this=0x5219afabd0, e=0x39bdbfe82f0) at widgets/qpushbutton.cpp:673
#19 0x000003867e61c444 in QApplicationPrivate::notify_helper (this=0x5219782e60, receiver=0x5219afabd0, e=0x39bdbfe82f0) at kernel/qapplication.cpp:3722
#20 0x000003867e61a1cc in QApplication::notify (this=0x39bdbfe8eb0, receiver=0x5219afabd0, e=0x39bdbfe82f0) at kernel/qapplication.cpp:3280
#21 0x000003867cef42d5 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#22 0x000003867e6204a2 in QCoreApplication::sendSpontaneousEvent (receiver=0x5219afabd0, event=0x39bdbfe82f0)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#23 0x000003867e6187eb in QApplicationPrivate::sendMouseEvent (receiver=0x5219afabd0, event=0x39bdbfe82f0, alienWidget=0x5219afabd0, nativeWidget=0x5219abcbc0, 
    buttonDown=0x3867eddb010 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2751
#24 0x000003867e6bf10f in QWidgetWindow::handleMouseEvent (this=0x5219b08990, event=0x39bdbfe8950) at kernel/qwidgetwindow.cpp:506
#25 0x000003867e6bdd1d in QWidgetWindow::event (this=0x5219b08990, event=0x39bdbfe8950) at kernel/qwidgetwindow.cpp:173
#26 0x000003867e61c444 in QApplicationPrivate::notify_helper (this=0x5219782e60, receiver=0x5219b08990, e=0x39bdbfe8950) at kernel/qapplication.cpp:3722
#27 0x000003867e619977 in QApplication::notify (this=0x39bdbfe8eb0, receiver=0x5219b08990, e=0x39bdbfe8950) at kernel/qapplication.cpp:3164
#28 0x000003867cef42d5 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#29 0x000003867e082f1e in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#30 0x000003867e0845f5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#31 0x000003867e06b108 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#32 0x000003867017c000 in ?? () from /usr/lib64/qt5/plugins/platforms/libqxcb.so
#33 0x0000038677c6a934 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#34 0x0000038677c6ab78 in ?? () from /usr/lib64/libglib-2.0.so.0
#35 0x0000038677c6ac1c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#36 0x000003867cf4b58c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#37 0x000003867cef223b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#38 0x000003867cef98a6 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#39 0x000003867e6190ff in QApplication::exec () at kernel/qapplication.cpp:2956
#40 0x0000005215d19342 in main (argc=1, argv=0x39bdbfe8fe8) at /var/tmp/portage/net-im/ktp-contact-list-9999/work/ktp-contact-list-9999/main.cpp:71
Comment 1 Martin Klapetek 2015-01-20 14:35:10 UTC
Git commit cfe1e76762b74cc51bd9a23b6202aecdb1aadf26 by Martin Klapetek.
Committed on 20/01/2015 at 14:34.
Pushed by mklapetek into branch 'master'.

[Widgets/join-chat-room] Fix crash

M  +1    -1    KTp/Widgets/join-chat-room-dialog.cpp

http://commits.kde.org/telepathy-common-internals/cfe1e76762b74cc51bd9a23b6202aecdb1aadf26