[Widgets/join-chat-room] Fix crash

BUG: 342985